# appack-cli

./: .gitignore  .licensesnip  .licensesnipignore  Cargo.toml  LICENSE  README.md  TODO.md  builder.Dockerfile  compose.yaml  install.sh  rebuild_snap.sh  run_test.sh  snapcraft.yaml
.github/workflows/: build_snap.yml
assets/creator/: AppPack.yaml  AppPackBuildConfig.yaml  README.md  myapp.desktop  plain-rdp.desktop
assets/doc/: DOCUMENTATION.md  freerdp_snap.yaml
notes/: _snap_notes.yaml
src/: main.rs
src/internal/: creator.rs  helpers.rs  info.rs  install_appack.rs  installed_helpers.rs  launch.rs  list_installed.rs  mod.rs  reset.rs  types.rs  uninstall_appack.rs  version.rs
src/logger/: logger.rs
src/types/: app_build_config.rs  app_installed.rs  local_settings.rs  mod.rs
src/utils/: logger.rs  mod.rs  qmp.rs  xdg_session_type_detector.rs  zip_dir.rs
