[package]
name = "appack-cli"
version = "0.1.0"
license = "GPL-3"
edition = "2024"
authors = [
    "Paul <abonnementspaul -@- gmail.com>",
    "All AppPack contributors"
]

[dependencies]
clap = { version = "4", features = ["derive"] }
zip = { version = "6" }
anyhow = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_yaml = { version = "0.9" }
qapi = { version = "0", features = [ "qmp" ] }
#shell-quote = {version = "0"}

[[bin]]
name = "appack"
path = "src/main.rs"