[package]
name = "appack"
version = "0.1.4"
license = "GPL-3.0-only"
edition = "2024"
authors = [
    "Paul <abonnementspaul -@- gmail.com>",
    "All AppPack contributors"
]

[dependencies]
clap = { version = "4", features = ["derive"] }
zip = { version = "7" }
anyhow = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_yaml = { version = "0.9" }
qapi = { version = "0", features = [ "qmp" ] }
notify-rust = {version = "4"}

[[bin]]
name = "appack"
path = "src/main.rs"